@@ -2375,7 +2375,7 @@ static int SCSIDeviceScan(dev_config & cfg, dev_state & state, scsi_device * scs
   UINT8  tBuf[64];
   UINT8  inqBuf[96];
   UINT8  vpdBuf[252];
-  char lu_id[64], serial[32+1], model[40+1];
+  char lu_id[64], serial[256], vendor[40], model[40];
 
   // Device must be open
   memset(inqBuf, 0, 96);
@@ -2414,13 +2414,12 @@ static int SCSIDeviceScan(dev_config & cfg, dev_state & state, scsi_device * scs
       scsi_decode_lu_dev_id(vpdBuf + 4, len, lu_id, sizeof(lu_id), NULL);
     }
   }
-  
   serial[0] = '\0';
   if (0 == (err = scsiInquiryVpd(scsidev, 0x80, vpdBuf, sizeof(vpdBuf)))) {
   	  len = vpdBuf[3];
   	  vpdBuf[4 + len] = '\0';
-  	  snprintf(&serial[0], sizeof(serial), "%s", &vpdBuf[4]);
-  } 
+  	  scsi_format_id_string(serial, (const unsigned char *)&vpdBuf[4], len);
+  }
 
   unsigned int lb_size;
   char si_str[64];
@@ -2439,8 +2438,8 @@ static int SCSIDeviceScan(dev_config & cfg, dev_state & state, scsi_device * scs
                      (si_str[0] ? ", " : ""), (si_str[0] ? si_str : ""));
   
   // format "model" string
-  snprintf(&model[0], sizeof(model), "%.8s-%.16s", (char *)&inqBuf[8], 
-                     (char *)&inqBuf[16]);
+  scsi_format_id_string(vendor, (const unsigned char *)&inqBuf[8], 8);
+  scsi_format_id_string(model, (const unsigned char *)&inqBuf[16], 16);
   PrintOut(LOG_INFO, "Device: %s, %s\n", device, cfg.dev_idinfo.c_str());
 
   // check that device is ready for commands. IE stores its stuff on
@@ -2581,7 +2580,7 @@ static int SCSIDeviceScan(dev_config & cfg, dev_state & state, scsi_device * scs
     std::replace_if(model, model+strlen(model), not_allowed_in_filename, '_');
     std::replace_if(serial, serial+strlen(serial), not_allowed_in_filename, '_');
     if (!state_path_prefix.empty()) {
-      cfg.state_file = strprintf("%s%s-%s.scsi.state", state_path_prefix.c_str(), model, serial);
+      cfg.state_file = strprintf("%s%s-%s-%s.scsi.state", state_path_prefix.c_str(), vendor, model, serial);
       // Read previous state
       if (read_dev_state(cfg.state_file.c_str(), state)) {
         PrintOut(LOG_INFO, "Device: %s, state read from %s\n", device, cfg.state_file.c_str());
@@ -2590,7 +2589,7 @@ static int SCSIDeviceScan(dev_config & cfg, dev_state & state, scsi_device * scs
       }
     }
     if (!attrlog_path_prefix.empty())
-      cfg.attrlog_file = strprintf("%s%s-%s.scsi.csv", attrlog_path_prefix.c_str(), model, serial);
+      cfg.attrlog_file = strprintf("%s%s-%s-%s.scsi.csv", attrlog_path_prefix.c_str(), vendor, model, serial);
   }
 
   finish_device_scan(cfg, state);
